--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=__KAKAO_MAP_API_KEY__"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Turf.js/6.5.0/turf.min.js"></script>
     <script src="js/main.js"></script>
 </body>
